# data-extractor

./: .gitignore  build.py  main.ipynb  main.py  pyproject.toml  readme.md  requirements.txt  script.py
playlist_generator/: __init__.py  additional_data.py  configs.py  dl_data.py  download_data.py  enums.py  error.py  excel_data.py  excel_file.py  file_managment.py  get_excel_data.py  get_json_data.py  json_data.py  log_print.py  logger.py  playlist.py  project_config.py  utils.py
