[project]
name = "data-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.4",
    "brotli==1.1.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "customtkinter>=5.2.2",
    "et-xmlfile==1.1.0",
    "idna==3.7",
    "mutagen==1.47.0",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "pefile==2024.8.26",
    "pillow==10.4.0",
    "pycryptodomex==3.20.0",
    "pyinstaller==6.10.0",
    "pyinstaller-hooks-contrib==2024.8",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "setuptools==75.1.0",
    "urllib3==2.2.2",
    "websockets==13.1",
    "yt-dlp==2024.9.27",
]
